public/src/scss/components/Dashboard/Home.scss
@import '../../variables';
@import '../../mixins';

@include dashboard-sidebar-collapse('home', 780px);

@include dashboard-content('home') {
	> .header {
		--right-offset: 0px;
		
		display: flex;
		justify-content: space-between;
		align-items: center;
		margin: 16px 30px 0 30px;
		
		@media (min-width: 450px) {
			--right-offset: 180px;
			
			> .create-deck-link {
				display: flex !important;
			}
		}
		
		> .left,
		> .create-deck-link {
			flex-shrink: 0;
		}
		
		> .left {
			width: calc(100vw - var(--sidebar-width) - #{30px * 2} - var(--right-offset));
			color: white;
			
			> .title,
			> .subtitle {
				@include overflow-ellipsis;
			}
			
			> .title {
				font-weight: 900;
			}
			
			> .subtitle {
				opacity: 0.7;
			}
			
			> .review-button {
				display: inline-block;
				margin-top: 16px;
				padding: 8px 16px;
				font-weight: 900;
				text-transform: uppercase;
				color: #582efe;
				background: white;
				border-radius: 8px;
				transition: color 0.3s, background 0.3s;
				
				&:hover {
					color: white;
					background: #051e34;
				}
			}
		}
		
		> .create-deck-link {
			display: none;
			align-items: center;
			padding: 10px 16px;
			color: #582efe;
			background: white;
			border-radius: 8px;
			transition: color 0.3s, background 0.3s;
			
			> svg {
				margin-right: 10px;
			}
			
			> p {
				font-weight: 900;
				text-transform: uppercase;
			}
			
			&:hover {
				color: white;
				background: #051e34;
			}
		}
	}
	
	> .my-decks,
	> .recommended-decks {
		> h1 {
			margin: 0 30px;
			font-size: 25px;
			font-weight: 800;
		}
		
		> .decks {
			overflow-x: auto;
			margin: 12px 0 15px 0;
			padding: 0 0 15px 30px;
			
			> div {
				display: flex;
				
				> .deck-cell {
					flex-shrink: 0;
					
					&:not(:last-of-type) {
						margin-right: 12px;
					}
				}
				
				&:not(:last-child) {
					margin-bottom: 12px;
				}
			}
		}
	}
	
	> .my-decks {
		margin-top: 20px;
		
		> h1 {
			color: white;
		}
	}
	
	> .recommended-decks {
		margin-top: 16px;
	}
}

